compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_std_option_functions.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/std_option_functions.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
false
42
7
stderr:
<empty>
