compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_structural_equality.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/structural_equality.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
true
true
true
false
stderr:
<empty>
