compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_typed_function_annotations.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/typed_function_annotations.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
11
stderr:
<empty>
