compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_variant_annotations.snap
---
source: tests/fixtures.rs
assertion_line: 843
expression: transcript
---
fixture: tests/fixtures/programs/basic/variant_annotations.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Green
stderr:
<empty>
