compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_variant_nullary.snap
---
source: tests/fixtures.rs
assertion_line: 729
expression: transcript
---
fixture: tests/fixtures/programs/basic/variant_nullary.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Red
Blue
green
stderr:
<empty>
