compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_variant_payload_match.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/variant_payload_match.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
seven
stderr:
<empty>
