compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_while_unit_sequence.snap
---
source: tests/fixtures.rs
assertion_line: 5068
expression: transcript
---
fixture: tests/fixtures/programs/basic/while_unit_sequence.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
done
stderr:
<empty>
