compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0001_basic.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0001_basic.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
stderr:
<empty>
