compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0005_addition.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0005_addition.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
3
stderr:
<empty>
